--- a/less/index.less
+++ b/less/index.less
@@ -1,59 +1,117 @@
-// Is this working?
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+// // Is this working?
+// /* http://meyerweb.com/eric/tools/css/reset/ 
+//    v2.0 | 20110126
+//    License: none (public domain)
+// */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+// html, body, div, span, applet, object, iframe,
+// h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+// a, abbr, acronym, address, big, cite, code,
+// del, dfn, em, img, ins, kbd, q, s, samp,
+// small, strike, strong, sub, sup, tt, var,
+// b, u, i, center,
+// dl, dt, dd, ol, ul, li,
+// fieldset, form, label, legend,
+// table, caption, tbody, tfoot, thead, tr, th, td,
+// article, aside, canvas, details, embed, 
+// figure, figcaption, footer, header, hgroup, 
+// menu, nav, output, ruby, section, summary,
+// time, mark, audio, video {
+// 	margin: 0;
+// 	padding: 0;
+// 	border: 0;
+// 	font-size: 100%;
+// 	font: inherit;
+// 	vertical-align: baseline;
+// }
+// /* HTML5 display-role reset for older browsers */
+// article, aside, details, figcaption, figure, 
+// footer, header, hgroup, menu, nav, section {
+// 	display: block;
+// }
+// body {
+// 	line-height: 1;
+// }
+// ol, ul {
+// 	list-style: none;
+// }
+// blockquote, q {
+// 	quotes: none;
+// }
+// blockquote:before, blockquote:after,
+// q:before, q:after {
+// 	content: '';
+// 	content: none;
+// }
+// table {
+// 	border-collapse: collapse;
+// 	border-spacing: 0;
+// }
+
+// /* Set every element's box-sizing to border-box */
+// * {
+//     box-sizing: border-box;
+// }
+
+// html, body {
+//     height: 100%;
+// }
+
+// Nesting: Every selector should be nested inside the main container. Avoid having global styles unless they are element level.
+	
+@font: 'Fascinate', cursive;
+		nav{
+		ul{display:flex; 
+		flex-direction:row;
+		justify-content: space-between;}
+
+		.fas{ font-size: 15px;
+			color:dodgerblue; }
+	}
+ 
+.TopImage{ background-image: url("../less/images/attempt.jpg");
+	display: flex;
+	justify-content: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 110px;
+			h1{text-shadow: 0 0 3px dodgerblue;
+			}
+		
+		}
+			
+
+h1{ text-align: center;
+	height: auto;
+	}
+	
+h2{text-align: center;
+		height: auto;
+		text-shadow: 0 0 3px dodgerblue;
+		font-family: @font;}
+
+h3{text-align: center;}
+
+h4{text-align: center;}
+
+.bottom{display: flex;
+		flex-direction: column;
+		align-items: center;
+	color: black;
+	h4{font-size: 1rem;
+		text-shadow: 0 0 3px dodgerblue;}
+	.fab{ color: dodgerblue;}
+	.fas{color: dodgerblue;}
+
 }
 
-/* Set every element's box-sizing to border-box */
-* {
-    box-sizing: border-box;
-}
+li{ text-align: center;}
 
-html, body {
-    height: 100%;
-}
+
+
+// Variables: Incorporate variables in your project for color and font stacks.
+
+
+// Mixins: Create 2 mixins of your choosing. Hint: It's super helpful to use flexbox properties in mixins
+// Mobile: Use nested-at rules to provide a mobile version of your resume. Use 500px as a max-width for mobile.
 
